added search bar that returns matches from the Relation column

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,16 @@
   padding: 1rem;
 }
 
+.search-field {
+  width: 18%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+  margin-left: auto;
+  margin-right: 32%;
+}
+
 table {
   border-collapse: collapse;
   width: 100%;
